intTests/test_type_errors/err018.log.good
Loading file "err018.saw"
Type errors:
  err018.saw:26:11-26:12: Type mismatch.
    Mismatch of type constructors. Expected: String but got Int
    err018.saw:16:14-16:20: The type String arises from this type annotation
    err018.saw:23:25-23:26: The type Int arises from the type of this term

    Expected: String
    Found:    Int

    Expected: {
          amethyst : String,
          moonstone : String,
          obsidian : String,
          turquoise : String
       }
    Found: {
          amethyst : Int,
          moonstone : Int,
          obsidian : Int,
          turquoise : Int
       }

  err018.saw:26:11-26:12: Type mismatch.
    Mismatch of type constructors. Expected: String but got Int
    err018.saw:17:15-17:21: The type String arises from this type annotation
    err018.saw:23:38-23:39: The type Int arises from the type of this term

    Expected: String
    Found:    Int

    Expected: {
          amethyst : String,
          moonstone : String,
          obsidian : String,
          turquoise : String
       }
    Found: {
          amethyst : Int,
          moonstone : Int,
          obsidian : Int,
          turquoise : Int
       }

  err018.saw:26:11-26:12: Type mismatch.
    Mismatch of type constructors. Expected: String but got Int
    err018.saw:18:14-18:20: The type String arises from this type annotation
    err018.saw:23:50-23:51: The type Int arises from the type of this term

    Expected: String
    Found:    Int

    Expected: {
          amethyst : String,
          moonstone : String,
          obsidian : String,
          turquoise : String
       }
    Found: {
          amethyst : Int,
          moonstone : Int,
          obsidian : Int,
          turquoise : Int
       }

  err018.saw:26:11-26:12: Type mismatch.
    Mismatch of type constructors. Expected: String but got Int
    err018.saw:19:15-19:21: The type String arises from this type annotation
    err018.saw:23:63-23:64: The type Int arises from the type of this term

    Expected: String
    Found:    Int

    Expected: {
          amethyst : String,
          moonstone : String,
          obsidian : String,
          turquoise : String
       }
    Found: {
          amethyst : Int,
          moonstone : Int,
          obsidian : Int,
          turquoise : Int
       }


FAILED
